src/components/delegateList/delegateList.css
@import '../app/variables.css';

:root {
  --grid-header-color: var(--color-black);
  --amount-positive-color: var(--color-success-dark);
  --amount-negative-color: var(--color-grayscale-dark);
  --blue: var(--color-primary-medium);
  --link-color: var(--color-primary-very-light);
  --row-background-color: var(--color-white);
  --filter-list-color: var(--color-grayscale-medium);
  --result-address-font-weight: var(--font-weight-semi-bold);
  --detail-label-font-weight: var(--font-weight-very-bold);
  --header-address-font-weight: var(--font-weight-semi-bold);
  --header-balance-unit-font-size-XL: 20px;
  --header-balance-unit-font-size-L: 18px;
  --header-subtitle-font-size-XL: 18px;
  --header-subtitle-font-size-L: 16px;
  --main-header-font-size-XL: 32px;
  --main-header-font-size-L: 28px;
  --main-header-font-size-XS: 24px;
  --grid-padding-L: 24px;
  --grid-padding-XS: 19px;
  --list-line-height: 25px;
  --grid-header-line-height: 60px;
  --main-row-line-height: 70px;
  --sub-row-height: 50px;
  --header-line-height: 36px;
  --main-header-unit-font-size: 20px;
  --grid-header-font-size: 15px;
  --details-font-color: var(--color-grayscale-dark);
  --details-label-font-size-XL: 15px;
  --details-label-font-size-L: 12px;
  --details-label-font-size-XS: 12px;
  --back-button-font-size-XL: 15px;
  --back-button-font-size-L: 12px;
  --back-button-font-size-XS: 12px;
  --back-button-arrow-font-size-XL: 16px;
  --back-button-arrow-font-size-L: 16px;
  --back-button-arrow-font-size-XS: 16px;
  --float-animation-distance: 10px;
  --even-row-background: #f5f8fc;
}

.wrapper {
  width: 100%;
}

.table {
  & :global thead th:first-child {
    display: none !important;
  }
}

.upVoteRow {
  background: #caf8ff !important;
}

.downVoteRow {
  background: #fed9d9 !important;
}

.pendingRow {
  background-color: #eaeae9 !important;
}

.actionBar {
  margin-top: 9px;
  display: inline-block;
}

.votesMenuButton {
  margin-right: 16px;
  margin-top: 8px;

  & :global span {
    vertical-align: top;
    line-height: 24px;
    margin-left: 6px;
  }
}

.voted {
  color: #7cb342;
}

.unvoted {
  color: #c62828;
}

.menuItem {
  flex-direction: row-reverse;
  width: 241px;
}

.icon {
  text-align: right;
  width: auto;
}

.menuInner {
  height: 306px;
  overflow-y: auto;
}

.button {
  width: auto;
  margin-top: 18px;
  margin-right: 16px;
}

.rotated {
  transform: rotate(45deg);
}

.voteButton {
  color: var(--color-black) !important;
  position: relative;
  top: 3px;
}

.table {
  & ul {
    list-style-type: none;
    line-height: 48px;
    margin: 0;
    padding-left: var(--grid-padding-L);
    padding-right: var(--grid-padding-L);
  }
}

.header {
  line-height: var(--header-line-height);
  padding: 20px var(--grid-padding-L);

  & h2 {
    margin-bottom: 0;
    font-weight: 400;
    padding-bottom: 60px;
    font-size: var(--main-header-font-size-XL);

    &.desktopTitle {
      display: block;
    }

    &.mobileTitle {
      display: none;
    }
  }

  & h3 {
    display: inline-block;
    margin: 0;
  }
}

.filters {
  font-weight: var(--font-weight-bold);
  color: var(--filter-list-color);
  line-height: var(--list-line-height);
  list-style: none;
  padding: 0;

  & .filter {
    display: inline-block;
    cursor: pointer;
    font-size: 15px;
    font-weight: 500;
    vertical-align: middle;
    margin-left: 10px;

    &:not(:last-of-type) {
      margin-right: 24px;
    }
  }

  & .active {
    border-bottom: 2px solid var(--amount-negative-color);
    color: var(--amount-negative-color);
  }
}

.productivity {
  text-align: right;
}

.search {
  position: relative;

  & input {
    height: 25px;
    border: none;
    outline: none;
    margin: 0;
    font-size: 15px;
    color: var(--color-grayscale-dark);
    font-weight: 400;
    padding-left: 30px;
    padding-right: 20px;
    vertical-align: middle;
    background-color: transparent;
    border-bottom: solid 1px transparent;
    transition: all ease 250ms;

    &:-moz-placeholder,
    &::-moz-placeholder,
    &::-webkit-input-placeholder {
      font-weight: 400;
      color: var(--color-grayscale-medium);
      font-size: 15px;
    }

    &.desktopInput {
      display: inline-block;
    }

    &.mobileInput {
      display: none;
    }

    &.dirty {
      border-bottom-color: var(--color-grayscale-dark);

      & ~ .clean {
        visibility: visible;
      }
    }
  }

  & .clean,
  & .search {
    color: rgba(0, 0, 0, 0.38);
    position: absolute;
  }

  & .search {
    font-size: 20px;
    vertical-align: middle;
    top: 4px;
    left: 4px;
    color: var(--color-grayscale-dark);
  }

  & .clean {
    visibility: hidden;
    top: 6px;
    right: 0;
    font-size: 16px;
  }
}

.checkbox {
  display: inline-block;
  width: 16px;
  height: 16px;
  position: relative;

  & input {
    visibility: hidden;
    position: absolute;
  }

  & span {
    position: absolute;
    left: 0;
    top: 0;

    &.checked {
      display: none;
    }

    &.unchecked {
      display: block;
    }
  }

  & input:checked {
    & ~ .checked {
      display: block;
    }

    & ~ .unchecked {
      display: none;
    }
  }
}

.delegatesList {
  overflow-y: auto;

  & .tableHead {
    flex-wrap: nowrap;

    & li {
      color: var(--color-grayscale-dark) !important;
      font-size: 15px !important;
      transition: all ease 200ms;
      font-weight: 700;
    }

    & .productivity {
      direction: rtl;
    }
  }

  & .row {
    background: linear-gradient(90deg, var(--color-white) 0%, #f5f8fc 82%);
    flex-wrap: nowrap;

    &:nth-child(2n) {
      background: var(--color-white);
    }

    & li {
      color: var(--color-grayscale-dark);
      font-size: 16px;
      font-weight: 400;

      &:last-child {
        font-weight: 300;
      }
    }
  }
}

.username {
  overflow: hidden;
  text-overflow: ellipsis;
}

.showChangeSummery {
  & .filters .filter:not(.search) {
    display: none;
  }

  & .delegatesList {
    & .input,
    & .row:not(.upVoteRow):not(.downVoteRow) {
      display: none;
    }
  }

  & .row li,
  & .tableHead li {
    &:first-child {
      display: none !important;
    }
  }
}

.emptyMessage {
  text-align: center;
  color: var(--color-grayscale-dark);
  padding: 23px 0;
  font-weight: 500;
}

@media (--large-viewport) {
  .header {
    padding: 20px var(--grid-padding-L);

    & h2 {
      font-size: var(--main-header-font-size-L);
    }
  }
}

@media (--medium-viewport) {
  .wrapper {
    overflow: scroll;
    height: 100%;
    min-height: 100%;
  }

  .header {
    padding: 0 19px !important;

    & .table .tableHead li {
      padding: 0 0 12px 12px;
    }

    &.offCanvas ~ .delegatesList {
      & .table .tableHead {
        width: 100%;
        position: fixed;
        top: var(--header-height-m);
        left: 0;
        z-index: 2;
        background: var(--color-white);
        box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.5);

        & li {
          padding-bottom: 0;
        }
      }
    }

    & h2.desktopTitle {
      display: none;
    }

    & h2.mobileTitle {
      display: block;
      padding: 0;
    }
  }

  .filters {
    display: flex;
    flex-direction: row;
    justify-content: space-between;

    & .filter {
      margin-right: 0 !important;

      & input {
        width: 70px;
      }
    }
  }

  .delegatesList {
    height: auto;
    overflow-y: visible;
    padding-bottom: 60px;

    & .row,
    & .tableHead {
      padding-left: var(--grid-padding-XS);
      padding-right: var(--grid-padding-XS);
    }

    & .tableHead li:nth-child(4),
    & .row li:nth-child(4) {
      display: none;
    }

    & .tableHead li {
      font-size: 12px !important;
    }
  }

  .showChangeSummery {
    & .filters .search {
      display: none;
    }

    & .delegatesList {
      & .row li:nth-child(3),
      & .tableHead li:nth-child(3) {
        flex-basis: 58.3% !important;
        max-width: 58.3% !important;
      }
    }
  }

  .search input {
    &.desktopInput {
      display: none;
    }

    &.mobileInput {
      display: inline-block;
    }
  }
}

@media (--small-viewport) {
  .header.offCanvas ~ .delegatesList .table .tableHead {
    top: var(--header-height-s);
  }
}

@media (--xSmall-viewport) {
  .header {
    padding: 20px var(--grid-padding-XS);

    & h2 {
      font-size: var(--main-header-font-size-XS);
    }

    & .account {
      display: none;
    }
  }
}

